checking permissions, /counting command